# TestSIM7000c

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  TestSIM7000c.ioc
Core/Inc/: main.h  stm32f7xx_hal_conf.h
Core/Src/: gpio.c  main.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
src/: CMakeLists.txt  main_app.cpp  main_app.h
src/sim7000mqtt/: ATCommands.hpp  ATCommunicator.cpp  ATCommunicator.hpp  ATParser.cpp  ATParser.hpp  CMakeLists.txt  SIM7000MQTT.cpp  SIM7000MQTT.hpp
src/sim7000mqtt/include/sim7000mqtt/: ATCommunicator.hpp  ATParser.hpp  SIM7000MQTT.hpp
src/sim7000mqtt/src/: ATCommunicator.cpp  ATParser.cpp  SIM7000MQTT.cpp
